macro/derive/tests/ui_fail/dump_decoded/generic.rs
use parity_scale_codec::Decode;

#[derive(Debug, Decode, iroha_derive::DumpDecoded)]
struct Struct<T>;
